--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -255,6 +255,17 @@
         <item>15</item>
     </integer-array>
 
+    <!-- Array of integer pairs controlling the rate at which the master volume changes
+         in response to volume up and down key events.
+         The first integer of each pair is compared against the current master volume
+         (in range 0 to 100).
+         The last pair with first integer <= the current volume is chosen,
+         and the second integer of the pair indicates the amount to increase the master volume
+         when volume up is pressed. -->
+    <integer-array name="config_masterVolumeRamp">
+        <item>0</item>  <item>5</item>  <!-- default: always increase volume by 5% -->
+    </integer-array>
+
     <!-- This string array should be overridden by the device to present a list of radio
          attributes.  This is used by the connectivity manager to decide which networks can coexist
          based on the hardware -->
@@ -381,6 +392,7 @@
         <item>5</item>
         <item>7</item>
         <item>9</item>
+        <item>18</item>
     </integer-array>
 
     <!-- If the DUN connection for this CDMA device supports more than just DUN -->
