--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -214,6 +214,30 @@
     <!-- Default for Settings.Secure.NFC_PAYMENT_COMPONENT -->
     <string name="def_nfc_payment_component"></string>
 
+    <!-- Default for Settings captive portal false -->
+    <bool name="def_captive_portal_detection_enabled">false</bool>
+
     <!-- Default setting for ability to add users from the lock screen -->
     <bool name="def_add_users_from_lockscreen">false</bool>
+    <!-- cmcc by fuqiang, start -->
+	<string name="def_home_page">http://bngt.itv.cmvideo.cn:8095</string>
+	<string name="def_upgrade_url">http://tview.itv.cmvideo.cn:80/ACSServlet</string>
+	<string name="def_upgrade_path"></string>
+	<string name="def_ntvuseraccount"></string>
+	<string name="def_ntvusersuffix"></string>
+	<string name="def_ntvuserpassword"></string>
+	<string name="def_ntp_server">cn.pool.ntp.org</string>
+	<string name="def_ntp_server2">221.181.100.40</string>
+	<string name="def_default_screen_ratio">1</string>
+	<string name="def_default_player_quality">0</string>
+	<string name="def_display_area"></string>
+
+	<string name="def_dhcp_user"></string>
+	<string name="def_dhcp_pswd"></string>
+	<string name="def_dhcp_option"></string>
+	<string name="def_dhcp_ipver"></string>
+	<string name="def_pppoe_username"></string>
+	<string name="def_pppoe_pswd"></string>
+	<string name="def_sqm_start_mode">0</string>
+	<!-- cmcc by fuqiang, end -->
 </resources>
